# ribin_gui

./: README.rst  pyproject.toml
src/ribin_gui/: app.py  constants.py  controllers.py  main.py  state.py  utils.py
src/ribin_gui/components/: sidebar.py
src/ribin_gui/config/: __init__.py  config_page.py  session.py  state.py
src/ribin_gui/controllers/: datas_controller.py  groups_controller.py  main_controller.py  menu_controller.py  menus_controller.py  sidebar_controller.py
src/ribin_gui/views/: conflict_resolution_view.py  datas_view.py  groups_view.py  import_view.py  main_view.py  menu_view.py  menus_view.py  sidebar_view.py
